@@ -1,28 +1,18 @@
-# Dockerfile for EPICS OPI PHoebus
-FROM ubuntu:20.04
+# Dockerfile for yet another json schema validator
+# The container provides some supply chain protection by building from source
+# agains a commit hash
 
-ENV DEBIAN_FRONTEND=noninteractive
+FROM golang:1.21.4 as build
 
-RUN apt-get update &&  apt-get install -y locales
-RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
-    dpkg-reconfigure --frontend=noninteractive locales && \
-    update-locale LANG=en_US.UTF-8
+# get version yajsv 1.41 by commit hash
+RUN git clone https://github.com/neilpa/yajsv.git && \
+    cd yajsv && \
+    git checkout 9889895863c595d38aa5d6347dfadb99f2687a51^{commit}
 
-ENV LANG en_US.UTF-8
-RUN apt-get install -y \
-    openjdk-11-jdk \
-    maven \
-    openjfx \
-    git
+RUN cd /go/yajsv && go build -o /yajsv
 
-ENV JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64/
-ENV ROOT=/phoebus
-ENV VERSION=4.7.2
+FROM alpine:3.18.4 as runtime
 
-RUN git clone https://github.com/ControlSystemStudio/phoebus.git \
-    --branch=v${VERSION} ${ROOT}
-WORKDIR ${ROOT}
-RUN mvn -DskipTests clean install
+COPY --from=build  /yajsv /yajsv
 
-RUN ln -s phoebus-product/target/product-${VERSION}.jar phoebus.jar
-ENTRYPOINT ["java", "-jar", "phoebus.jar", "-server", "4918", "--add-modules=ALL-SYSTEM"]
+ENTRYPOINT ["/yajsv"]
